Fixed align

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -95,10 +95,6 @@ a {
     }
 }
 
-.browser-icon {
-    vertical-align: middle;
-}
-
 .browser-version {
     padding: 0 .25em;
     font-size: .8em;
